--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Example</title>
+    <title>Marin Postma</title>
+    <link rel="icon" 
+      type="image/png" 
+      href="images/icon.png">
     <link rel="stylesheet" href="css/site.css">
   </head>
   <body>
