--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Marin Postma</title>
+    <script src="/assets/pace.js"></script>
+    <link rel="stylesheet" href="css/pace-theme.css">
     <link rel="icon" 
       type="image/png" 
       href="images/icon.png">
@@ -10,7 +12,7 @@
   </head>
   <body>
     <div id="app">
-	    <h1>here</h1>
+	    <h1 class="loader">MP.</h1>
     </div>
     <script src="js/app.js" type="text/javascript"></script>
   </body>
